# agentlab

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
docs/: agent_loop.md  agentlab.sample.yaml  agentlab_v0.1_design.md  architecture.md  custom_strategies.md  multi_agent.md  qa_acceptance.md  release_notes_v0.4.2.md  release_notes_v0.5.0.md  release_notes_v0.6.0.md  tool_calling.md
examples/: 01_single_agent.py  02_tool_agent.py  03_supervisor_worker.py  04_deep_research.py  05_custom_strategies.py
src/agentlab/: __init__.py  cli.py  cli_config.py  strategy_presets.py
src/agentlab/agents/: __init__.py  critic_agent.py  planner_agent.py  reader_agent.py  research_dimensions.py  search_agent.py  writer_agent.py
src/agentlab/core/: __init__.py  agent.py  context.py  event.py  message.py  runtime.py
src/agentlab/models/: __init__.py  base.py  mock_model.py  openai_compatible.py
src/agentlab/multi_agent/: __init__.py  scheduler.py  supervisor.py  team.py
src/agentlab/tools/: __init__.py  base.py  calculator.py  registry.py  web_search.py
src/agentlab/tracing/: __init__.py  (+2 more)
tests/: test_blackboard.py  test_cli_config.py  test_critic_agent.py  test_deep_research_cli.py  test_message.py  test_mock_model.py  test_planner_agent.py  test_reader_agent.py  test_research_workspace.py  test_runtime.py  test_search_agent.py  test_strategy_presets.py  test_supervisor_config.py  test_supervisor_flow.py  test_supervisor_run_policy.py  test_tool_registry.py  test_trace_recorder.py  test_web_search_tool.py  test_writer_agent.py
(+4 files in other folders)
