[project]
name = "agentlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mooxy", email = "chenmingahan@mails.usca.ac.cn" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.35.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
agentlab = "agentlab.cli:entrypoint"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
